// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DeveloperConfirmSubscription should match snapshot when not visible 1`] = `
<ContextProvider
  value={
    Object {
      "store": Object {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      },
      "subscription": Subscription {
        "handleChangeWrapper": [Function],
        "listeners": Object {
          "notify": [Function],
        },
        "onStateChange": [Function],
        "parentSub": undefined,
        "store": Object {
          "clearActions": [Function],
          "dispatch": [Function],
          "getActions": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "subscribe": [Function],
        },
        "unsubscribe": null,
      },
    }
  }
>
  <DeveloperConfirmSubscription
    afterClose={[MockFunction]}
    developer={
      Object {
        "company": "Dwarves Foundation",
        "created": "2019-11-21T08:46:41",
        "email": "tanphamhaiduong@gmail.com",
        "externalId": "6447271a-0268-4546-b628-878308d091eb",
        "id": "7a96e6b2-3778-4118-9c9b-6450851e5608",
        "isInactive": false,
        "jobTitle": "Software Engineer",
        "name": "Duong Pham",
        "telephone": "0978100461",
      }
    }
    visible={false}
  />
</ContextProvider>
`;

exports[`DeveloperConfirmSubscription should match snapshot when visible 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <DeveloperConfirmSubscription
    afterClose={[MockFunction]}
    developer={
      Object {
        "company": "Dwarves Foundation",
        "created": "2019-11-21T08:46:41",
        "email": "tanphamhaiduong@gmail.com",
        "externalId": "6447271a-0268-4546-b628-878308d091eb",
        "id": "7a96e6b2-3778-4118-9c9b-6450851e5608",
        "isInactive": false,
        "jobTitle": "Software Engineer",
        "name": "Duong Pham",
        "telephone": "0978100461",
      }
    }
    visible={true}
  >
    <Component
      footerItems={
        <React.Fragment>
          <Unknown
            loading={[MockFunction]}
            onClick={[Function]}
            type="button"
            variant="primary"
          >
            CLOSE
          </Unknown>
        </React.Fragment>
      }
      tapOutsideToDissmiss={false}
      title="Success"
      visible={true}
    />
  </DeveloperConfirmSubscription>
</Provider>
`;
